--- a/STARSapp/STARSapp/Info.plist
+++ b/STARSapp/STARSapp/Info.plist
@@ -24,6 +24,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses the camera to associate photos with profile</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app uses the Photos library to associate photos with profile</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
