--- a/STARSapp/STARSapp/Info.plist
+++ b/STARSapp/STARSapp/Info.plist
@@ -22,6 +22,10 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses camera for profile pictures</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app uses the photo library for profile pictures</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
